test_scripts/errors/list_index_oob.shm
let l = [1,2,3];
l[10];
